# starter-py

./: .gitignore  README.md  pyproject.toml  setup.py
.github/workflows/: build.yml  lint.yml  publish.yml  release.yml  test.yml
starter_py/: __init__.py
tests/: test_starter_py.py
