[tool.poetry]
include = ["README.md"]
name = "starter-py"
version = { path = "./starter_py/version.py", attr = "__version__" }
description = "Python3 Starter"
long_description = """
$(cat README.md)
"""
authors = ["Dup4 <lyuzhi.pan@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
flake8 = "^5.0.4"
pyright = "^1.1.266"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
