[tool.poetry]
name = "starter-py"
version = "0.0.3"
description = "Python3 Starter"
readme = "README.md"
authors = ["Dup4 <lyuzhi.pan@gmail.com>"]
license = "MIT"
classifiers = [
    "Topic :: Software Development :: Build Tools",
    "Topic :: Software Development :: Libraries :: Python Modules"
]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
flake8 = "^5.0.4"
pyright = "^1.1.266"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
